syntax = "proto3";

package proto;

option go_package = "github.com/streamnative/oxia/proto";


message Checkpoint {
  int64 commit_offset = 1;
}